@@ -38,7 +38,7 @@ public class LoanService {
     public List<LoanDto> getAllLoans() {
         return loanRepository.findAll().stream()
                 .map(loanMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public LoanDto getLoanById(Long id) {
@@ -50,25 +50,25 @@ public class LoanService {
     public List<LoanDto> getLoansByReaderId(Long readerId) {
         return loanRepository.findByReaderId(readerId).stream()
                 .map(loanMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LoanDto> getLoansByBookId(Long bookId) {
         return loanRepository.findByBookId(bookId).stream()
                 .map(loanMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LoanDto> getActiveLoans() {
         return loanRepository.findByReturnDateIsNull().stream()
                 .map(loanMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LoanDto> getCompletedLoans() {
         return loanRepository.findByReturnDateIsNotNull().stream()
                 .map(loanMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
